added icons to skills on mobile and desktop:

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Lato&family=Monoton&family=Neuton:wght@400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="webpage-style.css">
+    <script src="https://kit.fontawesome.com/0f79ad2218.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
@@ -55,20 +56,20 @@
 
         <h2 class="text-center" id="technical-skills-small">Skills</h2>
         <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>BootStrap</li>
-            <li>JavaScript</li>
-            <li>jQuery</li>
-            <li>Object-Oriented Programming</li>
-            <li>Java SE</li>
-            <li>Java EE (Servlets, JSP)</li>
-            <li>Spring Boot Framework</li>
-            <li>MySQL</li>
-            <li>Thymeleaf</li>
-            <li>Test-Driven Development</li>
-            <li>Paired Programming</li>
-            <li>VCS with Git</li>
+            <li><i class="fab fa-html5 mr-2"></i>HTML</li>
+            <li><i class="fab fa-css3-alt mr-2"></i>CSS</li>
+            <li><i class="fab fa-bootstrap mr-2"></i>BootStrap</li>
+            <li><i class="fab fa-js-square mr-2"></i>JavaScript</li>
+            <li><i class="fas fa-dollar-sign mr-2"></i>jQuery</li>
+            <li><i class="far fa-object-group mr-2"></i>Object-Oriented Programming</li>
+            <li><i class="fab fa-java mr-2"></i>Java SE</li>
+            <li><i class="fab fa-java mr-2"></i>Java EE (Servlets, JSP)</li>
+            <li><i class="fas fa-leaf mr-2"></i>Spring Boot Framework</li>
+            <li><i class="fas fa-database mr-2"></i>MySQL</li>
+            <li><i class="fab fa-pagelines mr-2"></i>Thymeleaf</li>
+            <li><i class="fas fa-vial mr-2"></i>Test-Driven Development</li>
+            <li><i class="fas fa-user-friends mr-2"></i>Paired Programming</li>
+            <li><i class="fab fa-github-square mr-2"></i>VCS with Git</li>
         </ul>
     </div>
 
@@ -209,21 +210,21 @@
                 <div id="skills-page">
                 <div id="skills-large">
                         <h2 class="text-center">Technical skills</h2>
-                        <ul>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>BootStrap</li>
-                            <li>JavaScript</li>
-                            <li>jQuery</li>
-                            <li>Object-Oriented Programming</li>
-                            <li>Java SE</li>
-                            <li>Java EE (Servlets, JSP)</li>
-                            <li>Spring Boot Framework</li>
-                            <li>MySQL</li>
-                            <li>Thymeleaf</li>
-                            <li>Test-Driven Development</li>
-                            <li>Paired Programming</li>
-                            <li>VCS with Git</li>
+                        <ul id="skills-list-large">
+                            <li><i class="fab fa-html5 mr-2"></i>HTML</li>
+                            <li><i class="fab fa-css3-alt mr-2"></i>CSS</li>
+                            <li><i class="fab fa-bootstrap mr-2"></i>BootStrap</li>
+                            <li><i class="fab fa-js-square mr-2"></i>JavaScript</li>
+                            <li><i class="fas fa-dollar-sign mr-2"></i>jQuery</li>
+                            <li><i class="far fa-object-group mr-2"></i>Object-Oriented Programming</li>
+                            <li><i class="fab fa-java mr-2"></i>Java SE</li>
+                            <li><i class="fab fa-java mr-2"></i>Java EE (Servlets, JSP)</li>
+                            <li><i class="fas fa-leaf mr-2"></i>Spring Boot Framework</li>
+                            <li><i class="fas fa-database mr-2"></i>MySQL</li>
+                            <li><i class="fab fa-pagelines mr-2"></i>Thymeleaf</li>
+                            <li><i class="fas fa-vial mr-2"></i>Test-Driven Development</li>
+                            <li><i class="fas fa-user-friends mr-2"></i>Paired Programming</li>
+                            <li><i class="fab fa-github-square mr-2"></i>VCS with Git</li>
                         </ul>
                     </div>
                 </div>
