updated font sizes for about me paragraph, connect, skills pages

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                             <div id="profile-photo" class="d-flex justify-content-center mb-3">
                                                 <img src="img/profile-photo.png" alt="photo" id="about-photo">
                                             </div>
-                    <p>Hello, my name is Moriah Humphries and I am a Dallas-Fort Worth based Software Engineer.
+                    <p id="intro-paragraph">Hello, my name is Moriah Humphries and I am a Dallas-Fort Worth based Software Engineer.
                         <br>
                         <br>
                         I am currently attending a 20 week career accelerator program at <a href="https://codeup.com/" target="_blank">Codeup Dallas.</a> I am seeking full time employment as a Software Engineer beginning in July 2020.
