updated medium size to display full website

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
 
 
-<!--    Top Navbar xs, small, med only-->
-<div id="navbar-section-small" class="d-block d-sm-none d-sm-block d-md-none d-md-block d-lg-none">
+<!--    Top Navbar xs, small only-->
+<div id="navbar-section-small" class="d-block d-sm-none d-sm-block d-md-none">
     <nav id="navbar-small">
         <ul class="d-flex nav flex-nowrap justify-content-around align-self-center">
             <li class="nav-li-small" id="icon-li-mobile"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg"
@@ -30,7 +30,7 @@
     </nav>
 </div>
 
-<main id="main-container-small" class="d-block d-sm-none d-sm-block d-md-none d-md-block d-lg-none">
+<main id="main-container-small" class="d-block d-sm-none d-sm-block d-md-none">
     <!--About me section-->
     <div id="about-me-anchor">
 
@@ -150,14 +150,14 @@
 
 
 <!--    Large and XL website -->
-<main id="main-container-large-projects" class="d-none d-lg-block d-xl-none d-xl-block">
+<main id="main-container-large-projects" class="d-none d-md-block d-lg-none d-lg-block d-xl-none d-xl-block">
 
     <div id="flex-div" class="d-flex">
         <!--    Side Navbar - XL and L only-->
         <div id="left-block">
-            <div id="sidebar" class="d-none d-xl-block d-lg-block d-xl-none">
+            <div id="sidebar" class="d-none d-md-block .d-lg-none d-lg-block d-xl-none d-xl-block">
                 <div id="navbar-section">
-                    <nav id="navbar" class="d-none d-xl-block d-lg-block d-xl-none">
+                    <nav id="navbar" class="d-none d-md-block .d-lg-none d-lg-block d-xl-none d-xl-block">
                         <ul class="d-flex nav flex-column">
                             <li class="nav li text-center d-flex justify-content-center"><a
                                     href="http://moriahhumphries.github.io"><img src="img/moriah-icon.jpg" alt="icon"
