added vh to project text to create continuity between slides

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
                             <!--                        Slide 1-->
                             <div class="carousel-item active" data-interval="5000">
-                                <div>
+                                <div class="project-text">
                                     <h5>Open Weather Map</h5>
                                     <p class="outside-link">
                                         An application created during Codeup's Javascript and Jquery modules. This
@@ -269,7 +269,7 @@
 
                             <!--            Slide 2-->
                             <div class="carousel-item" data-interval="5000" id="weather-image-large">
-                                <div>
+                                <div class="project-text">
                                     <h5>Coffee Project</h5>
                                     <p>
                                         Created with a partner during a pair programming exercise in Codeup's Javascript
@@ -284,8 +284,8 @@
                             </div>
 
                             <!--                        Slide 3-->
-                            <div class="carousel-item" data-interval="5000">
-                                <div>
+                            <div class="carousel-item">
+                                <div class="project-text">
                                     <h5>Third slide label</h5>
                                     <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
                                 </div>
