updated font size and alignment on project titles

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                             <!--                        Slide 1-->
                             <div class="carousel-item active" data-interval="5000">
                                 <div class="project-text">
-                                    <h5>Open Weather Map</h5>
+                                    <h5 class="project-title text-center">Open Weather Map</h5>
                                     <p class="outside-link">
                                         An application created during Codeup's Javascript and Jquery modules. This
                                         utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a>
@@ -270,7 +270,7 @@
                             <!--            Slide 2-->
                             <div class="carousel-item" data-interval="5000" id="weather-image-large">
                                 <div class="project-text">
-                                    <h5>Coffee Project</h5>
+                                    <h5 class="project-title text-center">Coffee Project</h5>
                                     <p>
                                         Created with a partner during a pair programming exercise in Codeup's Javascript
                                         module.
@@ -286,7 +286,7 @@
                             <!--                        Slide 3-->
                             <div class="carousel-item">
                                 <div class="project-text">
-                                    <h5>Third slide label</h5>
+                                    <h5 class="project-title text-center">Third slide label</h5>
                                     <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
                                 </div>
                                 <img src="img/coffeeimage.png" id="coffee-img-car2-large" class="d-block w-100"
