added project links to git repos and github icon to links

--- a/index.html
+++ b/index.html
@@ -251,16 +251,16 @@
                                 <div class="project-text">
                                     <h5 class="project-title text-center">Open Weather Map</h5>
                                     <p class="outside-link">
-                                        An application created during Codeup's Javascript and Jquery modules. This
-                                        utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a>
+                                       This weather map application utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a>
                                         and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>
-                                        <br>
                                         The user can search using the input box, and the map will adjust to display the
                                         new city and create a pin on the user's searched location. The weather will
                                         dynamically update for each search.
                                         <br>
                                         The user can also drag and drop the pin to update the weather for the pin's
                                         location.
+                                    <br>
+                                        <i class="fab fa-github-square mr-2"></i><a href="https://github.com/moriahhumphries/weather-map">View on GitHub</a>
                                     </p>
                                 </div>
                                 <img src="img/weatherimage.png" id="weather-img-car-large" class="d-block w-100"
@@ -277,6 +277,8 @@
                                         <br>
                                         This application allows for the user to select their desired roast of coffee,
                                         and search by name within the roast category.
+                                    <br>
+                                        <i class="fab fa-github-square mr-2"></i><a href="https://github.com/Moriah-and-DeLayne/coffee-project">View on GitHub</a>
                                     </p>
                                 </div>
                                 <img src="img/coffeeimage.png" id="coffee-img-car-large" class="d-block w-100"
@@ -287,7 +289,10 @@
                             <div class="carousel-item">
                                 <div class="project-text">
                                     <h5 class="project-title text-center">Third slide label</h5>
-                                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.
+                                    <br>
+                                        <i class="fab fa-github-square mr-2"></i><a href="#">View on GitHub</a>
+                                    </p>
                                 </div>
                                 <img src="img/coffeeimage.png" id="coffee-img-car2-large" class="d-block w-100"
                                      alt="coffee project image">
