set project links to open in separate window

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                                         The user can also drag and drop the pin to update the weather for the pin's
                                         location.
                                     <br>
-                                        <i class="fab fa-github-square mr-2"></i><a href="https://github.com/moriahhumphries/weather-map">View on GitHub</a>
+                                        <i class="fab fa-github-square mr-2"></i><a href="https://github.com/moriahhumphries/weather-map" target="_blank">View on GitHub</a>
                                     </p>
                                 </div>
                                 <img src="img/weatherimage.png" id="weather-img-car-large" class="d-block w-100"
@@ -278,7 +278,7 @@
                                         This application allows for the user to select their desired roast of coffee,
                                         and search by name within the roast category.
                                     <br>
-                                        <i class="fab fa-github-square mr-2"></i><a href="https://github.com/Moriah-and-DeLayne/coffee-project">View on GitHub</a>
+                                        <i class="fab fa-github-square mr-2"></i><a href="https://github.com/Moriah-and-DeLayne/coffee-project" target="_blank">View on GitHub</a>
                                     </p>
                                 </div>
                                 <img src="img/coffeeimage.png" id="coffee-img-car-large" class="d-block w-100"
@@ -291,7 +291,7 @@
                                     <h5 class="project-title text-center">Third slide label</h5>
                                     <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.
                                     <br>
-                                        <i class="fab fa-github-square mr-2"></i><a href="#">View on GitHub</a>
+                                        <i class="fab fa-github-square mr-2"></i><a href="#" target="_blank">View on GitHub</a>
                                     </p>
                                 </div>
                                 <img src="img/coffeeimage.png" id="coffee-img-car2-large" class="d-block w-100"
