centered text on project slides

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                             <div class="carousel-item active" data-interval="5000">
                                 <div class="project-text">
                                     <h5 class="project-title text-center">Open Weather Map</h5>
-                                    <p class="outside-link">
+                                    <p class="outside-link text-center">
                                        This weather map application utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a>
                                         and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>
                                         The user can search using the input box, and the map will adjust to display the
@@ -271,7 +271,7 @@
                             <div class="carousel-item" data-interval="5000" id="weather-image-large">
                                 <div class="project-text">
                                     <h5 class="project-title text-center">Coffee Project</h5>
-                                    <p>
+                                    <p class="text-center">
                                         Created with a partner during a pair programming exercise in Codeup's Javascript
                                         module.
                                         <br>
@@ -289,7 +289,7 @@
                             <div class="carousel-item">
                                 <div class="project-text">
                                     <h5 class="project-title text-center">Third slide label</h5>
-                                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.
+                                    <p class="text-center">Praesent commodo cursus magna, vel scelerisque nisl consectetur.
                                     <br>
                                         <i class="fab fa-github-square mr-2"></i><a href="#" target="_blank">View on GitHub</a>
                                     </p>
