--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <div id="navbar-section-small" class="d-block d-sm-none d-sm-block d-md-none">
     <nav id="navbar-small">
         <ul class="d-flex nav flex-nowrap justify-content-around align-self-center">
-            <li class="nav-li-small" id="icon-li-mobile"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg"
-                                                                                         alt="icon"
-                                                                                         id="small-icon-mobile"
-                                                                                         class="icon-small mr-1">About
-                Me</a></li>
+<!--            <li class="nav-li-small" id="icon-li-mobile"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg"-->
+<!--                                                                                         alt="icon"-->
+<!--                                                                                         id="small-icon-mobile"-->
+<!--                                                                                         class="icon-small mr-1">-->
+            <li class="nav-li-small"><a href="#about-me-anchor">About</a></li>
             <li class="nav-li-small"><a href="#technical-skills-anchor">Skills</a></li>
             <li class="nav-li-small"><a href="#project-anchor">Projects</a></li>
             <li class="nav-li-small"><a href="#connect-anchor">Connect</a></li>
@@ -297,12 +297,12 @@
                                 <img src="img/coffeeimage.png" id="coffee-img-car2-large" class="d-block w-100"
                                      alt="coffee project image">
                             </div>
-                            <a class="carousel-control-prev" href="#carouselExampleCaptions-large" role="button"
+                            <a class="carousel-control-prev carousel-control-large" href="#carouselExampleCaptions-large" role="button"
                                data-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next" href="#carouselExampleCaptions-large" role="button"
+                            <a class="carousel-control-next carousel-control-large" href="#carouselExampleCaptions-large" role="button"
                                data-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
