updated text layout on contact and skills page

--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
             <!--                Skills Large-->
             <div id="skills-page">
                 <div id="skills-large">
-                    <h2 class="text-center">Technical skills</h2>
+                    <h2 class="text-center ml-4">Technical skills</h2>
 
-                    <ul id="skills-list-large">
+                    <ul id="skills-list-large" class="mt-2 text-center">
                         <li><i class="fab fa-html5 mr-2"></i>HTML</li>
                         <li><i class="fab fa-css3-alt mr-2"></i>CSS</li>
                         <li><i class="fab fa-bootstrap mr-2"></i>BootStrap</li>
@@ -315,7 +315,7 @@
             <!--            Connect Large-->
             <div id="connect-page">
                 <div id="connect-large">
-                    <h2 class="text-center">Connect</h2>
+                    <h2 class="text-center ml-4">Connect</h2>
                     <ul class="d-flex align-items-center flex-column text-center" id="contact-list">
                         <li class="outside-link"><a href="https://github.com/moriahhumphries" target="_blank"
                                                     class="contact-link">Github</a></li>
