added 2 additional placeholder slides and indicators for future projects

--- a/index.html
+++ b/index.html
@@ -243,6 +243,8 @@
                             <li data-target="#carouselExampleCaptions-large" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleCaptions-large" data-slide-to="1"></li>
                             <li data-target="#carouselExampleCaptions-large" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleCaptions-large" data-slide-to="3"></li>
+                            <li data-target="#carouselExampleCaptions-large" data-slide-to="4"></li>
                         </ol>
                         <div class="carousel-inner">
 
@@ -297,6 +299,22 @@
                                 <img src="img/coffeeimage.png" id="coffee-img-car2-large" class="d-block w-100"
                                      alt="coffee project image">
                             </div>
+
+                            <!--                        Slide 4-->
+                            <div class="carousel-item">
+                                <div class="project-text">
+                                    <h5 class="project-title text-center">Fourth slide label</h5>
+                                    <p class="text-center">Praesent commodo cursus magna, vel scelerisque nisl consectetur.
+                                        <br>
+                                        <i class="fab fa-github-square mr-2"></i><a href="#" target="_blank">View on GitHub</a>
+                                    </p>
+                                </div>
+                                <img src="img/coffeeimage.png" id="coffee-img-car3-large" class="d-block w-100"
+                                     alt="coffee project image">
+                            </div>
+
+
+                            <!--                            Carousel Controls-->
                             <a class="carousel-control-prev carousel-control-large" href="#carouselExampleCaptions-large" role="button"
                                data-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
