updated project carousel for desktop website

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                             <li data-target="#carouselExampleCaptions-large" data-slide-to="1"></li>
                             <li data-target="#carouselExampleCaptions-large" data-slide-to="2"></li>
                             <li data-target="#carouselExampleCaptions-large" data-slide-to="3"></li>
-                            <li data-target="#carouselExampleCaptions-large" data-slide-to="4"></li>
+<!--                            <li data-target="#carouselExampleCaptions-large" data-slide-to="4"></li>-->
                         </ol>
                         <div class="carousel-inner">
 
@@ -290,27 +290,31 @@
                             <!--                        Slide 3-->
                             <div class="carousel-item">
                                 <div class="project-text">
-                                    <h5 class="project-title text-center">Third slide label</h5>
-                                    <p class="text-center">Praesent commodo cursus magna, vel scelerisque nisl consectetur.
-                                    <br>
-                                        <i class="fab fa-github-square mr-2"></i><a href="#" target="_blank">View on GitHub</a>
+                                    <h5 class="project-title text-center">Movie Application</h5>
+                                    <p class="text-center">A pair programming project that uses Javascript and a JSON server to simulate an API. The user can add, edit, and delete the movies they submit.
+
+                                        <br>
+                                        <i class="fab fa-github-square mr-2"></i><a href="https://github.com/team-hailstorm/movies-application" target="_blank">View on GitHub</a>
                                     </p>
                                 </div>
-                                <img src="img/coffeeimage.png" id="coffee-img-car2-large" class="d-block w-100"
-                                     alt="coffee project image">
+                                <img src="img/movies-app.png" id="movie-img-car-large" class="d-block w-100"
+                                     alt="movie project image">
                             </div>
 
                             <!--                        Slide 4-->
                             <div class="carousel-item">
                                 <div class="project-text">
-                                    <h5 class="project-title text-center">Fourth slide label</h5>
-                                    <p class="text-center">Praesent commodo cursus magna, vel scelerisque nisl consectetur.
+                                    <h5 class="project-title text-center">DadLister</h5>
+                                    <p class="text-center">This group project was created from the AdLister project from Codeup’s curriculum. The original product is designed to simulate an ad posting website.
                                         <br>
-                                        <i class="fab fa-github-square mr-2"></i><a href="#" target="_blank">View on GitHub</a>
+                                        DadLister was created to allow users to post questions that are best answered by a Dad figure in categories such as: BBQ Banter, Motor Moments, and Sport Stuff. This project uses JSPs, Servlets, JDBC, and MySQL.
+
+                                        <br>
+                                        <i class="fab fa-github-square mr-2"></i><a href="https://github.com/The-Tech-Warriors/DadLister" target="_blank">View on GitHub</a>
                                     </p>
                                 </div>
-                                <img src="img/coffeeimage.png" id="coffee-img-car3-large" class="d-block w-100"
-                                     alt="coffee project image">
+                                <img src="img/dadlister.png" id="dadlister-img-car-large" class="d-block w-100"
+                                     alt="DadLister project image">
                             </div>
 
 
