--- a/index.html
+++ b/index.html
@@ -115,6 +115,36 @@
                          alt="coffee project image">
                 </div>
             </div>
+            <!--                        Slide 3-->
+            <div class="carousel-item">
+                <div class="project-text">
+                    <h5 class="project-title text-center">Movie Application</h5>
+                    <p class="text-center">A pair programming project that uses Javascript and a JSON server to simulate an API. The user can add, edit, and delete the movies they submit.
+
+                        <br>
+                        <i class="fab fa-github-square mr-2"></i><a href="https://github.com/team-hailstorm/movies-application" target="_blank">View on GitHub</a>
+                    </p>
+                </div>
+                <img src="img/movies-app.png" id="movie-img-car" class="d-block w-100"
+                     alt="movie project image">
+            </div>
+
+            <!--                        Slide 4-->
+            <div class="carousel-item">
+                <div class="project-text">
+                    <h5 class="project-title text-center">DadLister</h5>
+                    <p class="text-center">This group project was created from the AdLister project from Codeup’s curriculum. The original product is designed to simulate an ad posting website.
+                        <br>
+                        DadLister was created to allow users to post questions that are best answered by a Dad figure in categories such as: BBQ Banter, Motor Moments, and Sport Stuff. This project uses JSPs, Servlets, JDBC, and MySQL.
+
+                        <br>
+                        <i class="fab fa-github-square mr-2"></i><a href="https://github.com/The-Tech-Warriors/DadLister" target="_blank">View on GitHub</a>
+                    </p>
+                </div>
+                <img src="img/dadlister.png" id="dadlister-img-car" class="d-block w-100"
+                     alt="DadLister project image">
+            </div>
+
             <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
@@ -124,6 +154,7 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+
     </div>
 
 
