removed description text from small project carousel

--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
                 <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
                 <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
             </ol>
+
+<!--                            Slide 1-->
             <div class="carousel-inner">
                 <div class="carousel-item active" data-interval="5000">
                     <img src="img/weatherimage.png" id="weather-img-car" class="d-block w-100"
@@ -119,11 +122,7 @@
             <div class="carousel-item">
                 <div class="project-text">
                     <h5 class="project-title text-center">Movie Application</h5>
-                    <p class="text-center">A pair programming project that uses Javascript and a JSON server to simulate an API. The user can add, edit, and delete the movies they submit.
-
-                        <br>
                         <i class="fab fa-github-square mr-2"></i><a href="https://github.com/team-hailstorm/movies-application" target="_blank">View on GitHub</a>
-                    </p>
                 </div>
                 <img src="img/movies-app.png" id="movie-img-car" class="d-block w-100"
                      alt="movie project image">
@@ -133,13 +132,7 @@
             <div class="carousel-item">
                 <div class="project-text">
                     <h5 class="project-title text-center">DadLister</h5>
-                    <p class="text-center">This group project was created from the AdLister project from Codeup’s curriculum. The original product is designed to simulate an ad posting website.
-                        <br>
-                        DadLister was created to allow users to post questions that are best answered by a Dad figure in categories such as: BBQ Banter, Motor Moments, and Sport Stuff. This project uses JSPs, Servlets, JDBC, and MySQL.
-
-                        <br>
                         <i class="fab fa-github-square mr-2"></i><a href="https://github.com/The-Tech-Warriors/DadLister" target="_blank">View on GitHub</a>
-                    </p>
                 </div>
                 <img src="img/dadlister.png" id="dadlister-img-car" class="d-block w-100"
                      alt="DadLister project image">
