updated project carousel on mobile to remove captions

--- a/index.html
+++ b/index.html
@@ -110,30 +110,16 @@
                          alt="weather project image">
                 </div>
                 <!--            Slide 2-->
-                <div class="carousel-item" data-interval="5000" id="weather-image">
+                <div class="carousel-item" data-interval="5000">
                     <img src="img/coffeeimage.png" id="coffee-img-car" class="d-block w-100" alt="coffee project image">
                 </div>
+<!--                                Slide 3-->
                 <div class="carousel-item" data-interval="5000">
-                    <img src="img/coffeeimage.png" id="coffee-img-car2" class="d-block w-100"
-                         alt="coffee project image">
+                    <img src="img/movies-app.png" id="movie-img-car" class="d-block w-100"
+                         alt="movie project image">
                 </div>
-            </div>
-            <!--                        Slide 3-->
-            <div class="carousel-item">
-                <div class="project-text">
-                    <h5 class="project-title text-center">Movie Application</h5>
-                        <i class="fab fa-github-square mr-2"></i><a href="https://github.com/team-hailstorm/movies-application" target="_blank">View on GitHub</a>
-                </div>
-                <img src="img/movies-app.png" id="movie-img-car" class="d-block w-100"
-                     alt="movie project image">
-            </div>
-
             <!--                        Slide 4-->
-            <div class="carousel-item">
-                <div class="project-text">
-                    <h5 class="project-title text-center">DadLister</h5>
-                        <i class="fab fa-github-square mr-2"></i><a href="https://github.com/The-Tech-Warriors/DadLister" target="_blank">View on GitHub</a>
-                </div>
+            <div class="carousel-item" data-interval="5000">
                 <img src="img/dadlister.png" id="dadlister-img-car" class="d-block w-100"
                      alt="DadLister project image">
             </div>
