added icons to connect page, updated spacing

--- a/index.html
+++ b/index.html
@@ -347,17 +347,17 @@
             <!--            Connect Large-->
             <div id="connect-page">
                 <div id="connect-large">
-                    <h2 class="text-center ml-4">Connect</h2>
+                    <h2 class="text-center ml-5">Connect</h2>
                     <ul class="d-flex align-items-center flex-column text-center" id="contact-list">
-                        <li class="outside-link"><a href="https://github.com/moriahhumphries" target="_blank"
-                                                    class="contact-link">Github</a></li>
-                        <br>
-                        <li class="outside-link"><a href="https://www.linkedin.com/in/moriah-humphries-126621b3/"
+                        <li class="outside-link"><i class="fab fa-linkedin mr-2 mt-5"></i><a href="https://www.linkedin.com/in/moriah-humphries-126621b3/"
                                                     target="_blank" class="contact-link">LinkedIn</a></li>
-                        <br>
-                        <li class="outside-link"><a href="mailto:moriah.humphries@gmail.com?Subject=Let's%20connect!"
+
+                        <li class="outside-link"><i class="fas fa-envelope mr-2 mt-3"></i><a href="mailto:moriah.humphries@gmail.com?Subject=Let's%20connect!"
                                                     target="_top" class="contact-link">moriah.humphries@gmail.com</a>
                         </li>
+                        <li class="outside-link"><i class="fab fa-github-square mr-2 mt-3"></i><a href="https://github.com/moriahhumphries" target="_blank"
+                                                                                                  class="contact-link">Github</a></li>
+                        <li><i class="fas fa-user-graduate mr-2 mt-3"></i><a href="#" target="_blank" class="contact-link">Codeup Alumni Profile (coming soon!)</a></li>
                     </ul>
                 </div>
             </div>
