added icons to small connect section, updated spacing

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-
+        </div>
     </div>
 
 
@@ -144,17 +144,19 @@
     </div>
     <div id="connect">
         <h2 class="text-center" id="connect-small">Connect</h2>
-        <ul>
-            <li class="outside-link"><a href="https://github.com/moriahhumphries" target="_blank" class="contact-link">Github</a>
+        <ul class="d-flex align-items-center flex-column text-center" id="contact-list-small">
+            <li class="outside-link"><i class="fab fa-linkedin mr-1 mt-5"></i><a href="https://www.linkedin.com/in/moriah-humphries-126621b3/"
+                                                                                 target="_blank" class="contact-link">LinkedIn</a></li>
+
+            <li class="outside-link"><i class="fas fa-envelope mr-1 mt-3"></i><a href="mailto:moriah.humphries@gmail.com?Subject=Let's%20connect!"
+                                                                                 target="_top" class="contact-link">moriah.humphries@gmail.com</a>
             </li>
-            <br>
-            <li class="outside-link"><a href="https://www.linkedin.com/in/moriah-humphries-126621b3/" target="_blank"
-                                        class="contact-link">LinkedIn</a></li>
-            <br>
-            <li class="outside-link">Email me @ <a href="mailto:moriah.humphries@gmail.com?Subject=Let's%20connect!"
-                                                   target="_top" class="contact-link">moriah.humphries@gmail.com</a>
-            </li>
+            <li class="outside-link"><i class="fab fa-github-square mr-1 mt-3"></i><a href="https://github.com/moriahhumphries" target="_blank"
+                                                                                      class="contact-link">Github</a></li>
+            <li><i class="fas fa-user-graduate mr-1 mt-3"></i><a href="#" target="_blank" class="contact-link">Codeup Alumni Profile</a></li>
+        <li>(Coming soon!)</li>
         </ul>
+    </div>
     </div>
 </main>
 
@@ -343,6 +345,7 @@
                     </div>
                 </div>
             </div>
+
 
             <!--            Connect Large-->
             <div id="connect-page">
