updated spacing in desktop skills list

--- a/index.html
+++ b/index.html
@@ -228,20 +228,20 @@
                     <h2 class="text-center ml-4">Technical skills</h2>
 
                     <ul id="skills-list-large" class="mt-2 text-center">
-                        <li><i class="fab fa-html5 mr-2"></i>HTML</li>
-                        <li><i class="fab fa-css3-alt mr-2"></i>CSS</li>
-                        <li><i class="fab fa-bootstrap mr-2"></i>BootStrap</li>
-                        <li><i class="fab fa-js-square mr-2"></i>JavaScript</li>
-                        <li><i class="fas fa-dollar-sign mr-2"></i>jQuery</li>
-                        <li><i class="far fa-object-group mr-2"></i>Object-Oriented Programming</li>
-                        <li><i class="fab fa-java mr-2"></i>Java SE</li>
-                        <li><i class="fab fa-java mr-2"></i>Java EE (Servlets, JSP)</li>
-                        <li><i class="fas fa-leaf mr-2"></i>Spring Boot Framework</li>
-                        <li><i class="fas fa-database mr-2"></i>MySQL</li>
-                        <li><i class="fab fa-pagelines mr-2"></i>Thymeleaf</li>
-                        <li><i class="fas fa-vial mr-2"></i>Test-Driven Development</li>
-                        <li><i class="fas fa-user-friends mr-2"></i>Paired Programming</li>
-                        <li><i class="fab fa-github-square mr-2"></i>VCS with Git</li>
+                        <li><i class="fab fa-html5 mr-2 mt-5"></i>HTML</li>
+                        <li><i class="fab fa-css3-alt mr-2 mt-2"></i>CSS</li>
+                        <li><i class="fab fa-bootstrap mr-2 mt-2"></i>BootStrap</li>
+                        <li><i class="fab fa-js-square mr-2 mt-2"></i>JavaScript</li>
+                        <li><i class="fas fa-dollar-sign mr-2 mt-2"></i>jQuery</li>
+                        <li><i class="far fa-object-group mr-2 mt-2"></i>Object-Oriented Programming</li>
+                        <li><i class="fab fa-java mr-2 mt-2"></i>Java SE</li>
+                        <li><i class="fab fa-java mr-2 mt-2"></i>Java EE (Servlets, JSP)</li>
+                        <li><i class="fas fa-leaf mr-2 mt-2"></i>Spring Boot Framework</li>
+                        <li><i class="fas fa-database mr-2 mt-2"></i>MySQL</li>
+                        <li><i class="fab fa-pagelines mr-2 mt-2"></i>Thymeleaf</li>
+                        <li><i class="fas fa-vial mr-2 mt-2"></i>Test-Driven Development</li>
+                        <li><i class="fas fa-user-friends mr-2 mt-2"></i>Paired Programming</li>
+                        <li><i class="fab fa-github-square mr-2 mt-2"></i>VCS with Git</li>
                     </ul>
                 </div>
             </div>
